# e2b-rust-sqlite

./: .gitignore  Cargo.toml  README.md  cocktailAPI.js  cocktailGenerator.js  database.sqlite  errorHandler.js  index.html  main.js  preferences.js  shared_dependencies.md  styles.css
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/20210928000000_create_preferences/: up.sql
migrations/20210928000001_create_recipes/: up.sql
src/: db.rs  enemies.py  game.py  graphics.py  handler.rs  handlers.rs  levels.py  lib.rs  main.py  main.rs  models.rs  objects.py  physics.py  player.py  router.rs  routes.rs  schema.rs  sounds.py  utils.rs
src/controllers/: home_controller.rs  mod.rs  preferences_controller.rs  recipe_controller.rs
src/models/: mod.rs  preferences.rs  recipe.rs  user.rs
src/routes/: home.rs  mod.rs  preferences.rs  recipe.rs
src/services/: mod.rs  preferences_service.rs  recipe_service.rs
src/utils/: db_connector.rs  error_handler.rs  mod.rs
static/css/: styles.css
static/js/: main.js
templates/: index.html  preferences.html  recipe.html
