[package]
name = "milkshake_maker"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.3"
rocket_contrib = "0.4.11"
diesel = { version = "1.4.5", features = ["postgres"] }
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
dotenv = "0.15.0"


[[bin]]
name = "milkshake_maker"
path = "src/main.rs"

[build-dependencies]
dotenv_codegen = "0.15.0"
