[package]
name = "milkshake_maker"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2_diesel = "1.0.0"

[dependencies.rocket_codegen]
version = "0.4.6"

[[bin]]
name = "milkshake_maker"
path = "src/main.rs"

[build-dependencies]
diesel_cli = { version = "1.4.0", features = ["postgres"] }